@@ -1,0 +1,20 @@
+ply
+format ascii 1.0
+comment Created by Blender 2.82 (sub 7) - www.blender.org, source file: ''
+element vertex 4
+property float x
+property float y
+property float z
+property float nx
+property float ny
+property float nz
+property float s
+property float t
+element face 1
+property list uchar uint vertex_indices
+end_header
+-8.994242 4.025494 -1.045056 0.142292 -0.989825 0.000000 0.000000 0.000000
+1.150908 5.483912 -1.045056 0.142292 -0.989825 0.000000 1.000000 0.000000
+1.150908 5.483913 4.042353 0.142292 -0.989825 0.000000 1.000000 1.000000
+-8.994242 4.025495 4.042353 0.142292 -0.989825 0.000000 0.000000 1.000000
+4 0 1 2 3
