@@ -27,6 +27,7 @@
 * Fixed a problem when using path.forceblackbackground.enable and env. lights
 * Fixed a problem with scenes with very hard light paths and Metropolis sampler (issue #312)
 * Sampler shared data are now reseted at the end of a scene edit (issue #312)
+* Fixed a problem in automatic cache radius estimation of PhotonGI when using Orthographic camera (issue #324)
 
 Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
 of release notes.
